Remove: TwitterNinja from support modal

--- a/src/index.html
+++ b/src/index.html
@@ -350,14 +350,7 @@
             <i class="material-icons notranslate">build</i>
             <span>
               the development of this site and an API to test multiple accounts at the same time
-              or all of your followers,
-            </span>
-          </li>
-          <li>
-            <i class="material-icons notranslate">extension</i>
-            <span>
-              the development of TwitterNinja, a browser extension that disables the quality filter
-              for you.
+              or all of your followers.
             </span>
           </li>
         </ul>
