Fix: missing reference to UI on toast-action button

--- a/src/index.html
+++ b/src/index.html
@@ -316,9 +316,7 @@
       </div>
       <div class="row">
         <div class="col s12 center">
-          <button
-            class="btn-flat toast-action"
-            onClick="ui.qfSettingToastDimsmiss();">OK</button>
+          <button class="btn-flat toast-action">OK</button>
         </div>
       </div>
     </div>
