Change: translateable header (title/screenName)

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,12 @@
   <body>
     <section class="row header section">
       <div class="col s12">
-        <h2>Is <span class="header-screen_name">@username</span><br> shadowbanned on Twitter?</h2>
+        <h2
+          id="headerScreenName"
+          data-i18n="common:title"
+        >
+          {{common:title}}
+        </h2>
       </div>
       <button
         class="btn modal-trigger waves-effect waves white"
