Change: translatable screenName input label

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,12 @@
               data-tooltip="Please provide a valid Twitter @handle!"
               maxlength="16"
             >
-            <label for="screenName">Username</label>
+            <label
+              for="screenName"
+              data-i18n="common:screenNameDefault"
+            >
+              {{common:screenNameDefault}}
+            </label>
           </div>
           <div>
             <button
