--- a/src/index.html
+++ b/src/index.html
@@ -87,194 +87,45 @@
       <div class="col s12 offset-m1 m10 offset-l2 l8">
         <ul id="functionality" class="collapsible popout">
           <li>
-            <div class="collapsible-header">
-              But Twitter claims that they do not shadowban
+            <div
+              class="collapsible-header"
+              data-i18n="functionality:noShadowbanClaim.title"
+            >
+              {{functionality:noShadowbanClaim.title}}
             </div>
-            <div class="collapsible-body">
-              In a <a href="https://blog.twitter.com/en_us/topics/company/2018/Setting-the-record-straight-on-shadow-banning.html">blog post from July 2018</a>,
-              Twitter claims that they do not shadowban by defining shadowbanning as
-              <i>deliberately making someone’s content undiscoverable to everyone except the person who posted it, unbeknownst to the original poster</i>.
-              If you strictly follow Twitter's own definition, this may not be false because the key is discoverability. Later, Twitter provides a hint why
-              this definition is deceptive by stating that you are
-              <i>always able to see the tweets from accounts you follow (although you may have to do more work to find them, like go directly to their profile)</i>.
-              The problem is obvious: Having to do more work to find tweets of accounts is not shadowbanning if you let Twitter define it. Although tweets within a thread
-              may be completely invisible to others or tweets may not be shown in a user's followers' timelines, you will always be able to find those tweets by navigating
-              to the user's "Tweets &amp; replies" section on their profile. In contrast to Twitter, we find that this is shadowbanning because without navigating there, it
-              is not even possible for others to know that the corresponding tweets do exist.
+            <div
+              class="collapsible-body"
+              data-i18n="functionality:noShadowbanClaim.text"
+            >
+              {{functionality:noShadowbanClaim.text}}
             </div>
           </li>
           <li>
-            <div class="collapsible-header">
-              Why is the QFD test gone?
+            <div
+              class="collapsible-header"
+              data-i18n="functionality:qfdTestGone.title"
+            >
+              {{functionality:qfdTestGone.title}}
             </div>
-            <div class="collapsible-body">
-              <h5>Quality Filter Discrimination</h5>
-              <p>
-                QFD caused your tweets to be invisible within the latest section of the
-                search, including hashtags, when the quality filter on the search page was turned on.
-                The filter was turned on by default
-                and would reset for each search anew. QFD was introduced on May 15, 2018 as part of
-                Twitter's so-called <a href="https://blog.twitter.com/official/en_us/topics/product/2018/Serving_Healthy_Conversation.html">healthy conversation project</a>.
-              </p>
-              <p>
-                The quality filter was deprecated shortly before Twitter CEO Jack Dorsey
-                <a href="https://docs.house.gov/meetings/IF/IF00/20180905/108642/HHRG-115-IF00-Wstate-DorseyJ-20180905.pdf">testified before the United States House Committee on Energy and Commerce</a>.
-                In his testimony, Dorsey stated the following:<br/>
-                <i>Twitter recently made a change to how one of our behavior based algorithms works in
-                search results. When people used search, our algorithms were filtering out those that had a higher
-                likelihood of being abusive from the “Lastest" tab by default. Those search results were visible
-                in “Latest” if someone turned off the quality filter in search, and they were also in Top search
-                and elsewhere throughout the product. Twitter decided that a higher level of precision is needed
-                when filtering to ensure these accounts are included in “Latest” by default. Twitter therefore
-                turned off the algorithm. As always, we will continue to refine our approach and will be
-                transparent about why we make the decisions that we do.</i><br/>
-                Currently, the quality filter seems to have no effect indeed. But please note that this is not a verification
-                that users are not classified anymore by this algorithm. We just cannot observe it anymore through the quality filter.
-              </p>
-              <p>For documentation purposes, you still find the frequently answered questions about QFD here:</p>
-              <ul id="qfdFAQ" class="collapsible">
-                <li>
-                  <div class="collapsible-header">
-                    <span>Does turning off the quality filter within my notification settings help?</span>
-                  </div>
-                  <div class="collapsible-body">
-                    <p>
-                      The quality filter within your notification settings only controls the
-                      notification you receive. Turning it off is recommended and will cause you
-                      to see more notifications which you would not have received otherwise.
-                      However, turning it off will not cause your own tweets to be more visible.
-                    </p>
-                  </div>
-                </li>
-                <li>
-                  <div class="collapsible-header">
-                    <span>How do I get into the QFD ban?</span>
-                  </div>
-                  <div class="collapsible-body">
-                    <p>
-                      A lot of interaction with accounts affected by QFD will likely cause your
-                      account to be affected by QFD soon, too. The absence of personal misbehavior
-                      does not guarantee an account to be unaffected.
-                    </p>
-                  </div>
-                </li>
-                <li>
-                  <div class="collapsible-header">
-                    <span>How do I get out of the QFD ban?</span>
-                  </div>
-                  <div class="collapsible-body">
-                    <p>
-                      Several German Twitter users that were affected by QFD have been
-                      experimenting with an Arabic follow-back botnet.
-                      The botnet generated a lot of followers for those who followed some
-                      accounts from this botnet. By accumulating many new followers that were not
-                      affected by QFD, at least 30 accounts were able to escape this type of ban.
-                      This is a strong hint that guilt by association is a major concept of the
-                      classifying algorithm.
-                    </p>
-                  </div>
-                </li>
-                <li>
-                  <div class="collapsible-header">
-                    <span>Is there a political bias?</span>
-                  </div>
-                  <div class="collapsible-body">
-                    <p>
-                      The quality filter indeed seems to mainly affect conservative and right-wing
-                      accounts. Testing over 2,000 contacts of two German left-wing extremist
-                      accounts did not yield a single account affected by QFD that would not be
-                      considered politically right. Testing 509 Twitter accounts from German
-                      members of Parliament yielded 14 affected accounts. All of them belong to
-                      the AfD, which is a German right-wing party.
-                    </p>
-                  </div>
-                </li>
-                <li>
-                  <div class="collapsible-header">
-                    <span>Does it only affect hashtags and the search? Why is it so bad then?</span>
-                  </div>
-                  <div class="collapsible-body">
-                    <p>
-                      We cannot tell whether the effects of QFD are limited to hashtags and the
-                      search. These are only the symptoms making the ban visible to us. It shows
-                      that Twitter is capable and willing to discriminate against accounts with certain
-                      political opinions. Since shadowbanning is a very unethical way to silence
-                      people already, it is possible for Twitter to apply methods that are harder
-                      to detect. Think of more subtle ways of banning by limiting the share of
-                      followers who a user's tweets are shown to. This would be a censorship
-                      method that could only be detected collectively by their followers.
-                    </p>
-                  </div>
-                </li>
-              </ul>
+            <div
+              class="collapsible-body"
+              data-i18n="functionality:qfdTestGone.text"
+            >
+              {{functionality:qfdTestGone.text}}
             </div>
           </li>
           <li>
-            <div class="collapsible-header">
-              How does this tester work?
+            <div
+              class="collapsible-header"
+              data-i18n="functionality:testerFunctions.title"
+            >
+              {{functionality:testerFunctions.title}}
             </div>
-            <div class="collapsible-body">
-              <h5>Search Ban</h5>
-              <p>
-                The Twitter search features several search modifiers. One of them is the prefix from:
-                which allows to search for tweets from a specific user. For example, when checking
-                whether
-                <a href="https://twitter.com/shadowban_eu">
-                  @shadowban_eu
-                </a>
-                has a shadowban, we query the Twitter search for
-                <a href="https://twitter.com/search?f=tweets&vertical=default&q=from%3A%40shadowban_eu&src=typd&qf=off">
-                  from:@shadowban_eu
-                </a>.
-                If we do not find any tweets although the user has
-                tweeted in the past, the account is subject to a search ban.
-              </p>
-              <h5>Thread Ban</h5>
-              <p>
-                When the user has a search ban, the tester searches their profile for the latest
-                tweet with at least one reply. It then visits the direct URL of the tweet and
-                selects some reply tweet. Afterwards, the direct URL of the reply tweet is visited.
-                If the tweet that the user replied to is not visible, the likelihood that the
-                account is affected by a thread shadowban is very high.
-              </p>
-              <h5>QFD (deprectated)</h5>
-              <p>
-                When you upload an image, cite a tweet or link to an external page, Twitter generates
-                a shortlink for that content.
-              </p>
-              <p>
-                We first find a reference tweet using a combination of from: and filter: search
-                modifiers. For example,
-                <a href="https://twitter.com/search?f=tweets&q=from%3A%40shadowban_eu%20filter%3Alinks&src=typd">
-                  from:@shadowban_eu filter:links
-                </a>
-                returns all tweets from
-                <a href="https://twitter.com/shadowban_eu">
-                  @shadowban_eu
-                </a>
-                containing a link.
-              </p>
-              <p>
-                We simply pick one result tweet as
-                reference and extract the shortlink, e.g.
-                <a href="https://t.co/5Vzu63ypQJ">
-                  https://t.co/5Vzu63ypQJ
-                </a>.<br />
-                (This link points to a tweet, quoted <a href="https://twitter.com/shadowban_eu/status/1019242190277697538">here</a>).
-              </p>
-              <p>
-                We then query the Twitter search for the tweet using the shortlink's URL
-                with the quality filter turned on and off.
-                If the reference tweet is found in both
-                cases, the account is not affected by QFD. In case it is found only when the filter
-                is turned off, it is affected.
-              </p>
-              <p>
-                We chose this method because shortlinks are unique. Methodically, it does not differ
-                from searching for text or a hashtag but the uniqueness of shortlinks is a technical
-                advantage.
-              </p>
-              </p>
+            <div
+              class="collapsible-body"
+              data-i18n="functionality:testerFunctions.text"
+            >
+              {{functionality:testerFunctions.text}}
             </div>
           </li>
         </ul>
@@ -316,7 +167,7 @@
           <ul id="NOTICE--{{task.faq.id}}--ME" class="collapsible hide" data-task-component="faq">
             <li class="techInfo">
               <div class="collapsible-header">
-                <span>Technical information about the result</span>
+              <span>Technical information about the result</span>
               </div>
               <div class="collapsible-body">
                 <p class="techContent">
@@ -331,9 +182,11 @@
     </div>
     <div id="qf-setting-toast-template" class="hide">
       <div class="row">
-        <div class="col s12">
-          PLEASE NOTE: We can only detect the presence of specific bans or deboosting methods, not their absence. There may be others
-          which we do not know or cannot easily test for.
+        <div
+          class="col s12"
+          data-i18n="common:qfSettingToast"
+        >
+          {{common:qfSettingToast}}
         </div>
       </div>
       <div class="row">
@@ -343,40 +196,20 @@
       </div>
     </div>
     <div id="donate-modal" class="modal modal-fixed-footer">
-      <div class="modal-content">
-        <h4>Support Us</h4>
-        <p>Shadowban.eu is an open-source project, created and run in the spirit of Benjamin Franklin's</p>
-        <p>
-          <i>“Knowledge is in every country the surest basis of public happiness.”</i>
-        </p>
-        <p>
-          We hope to have brought you some clarity about what is going on with your Twitter account.
-          If you feel like supporting us, you can do so by donating to our PayPal.
-        </p>
-        <h6>
-          We aren't done, there's more to come
-        </h6>
-        <p>
-          Your donation would help
-        </p>
-        <ul class="browser-default">
-          <li>
-            <i class="material-icons notranslate">search</i>
-            <span>
-              us to look further into other ways Twitter has implemented to lower your reach,
-            </span>
-          </li>
-          <li>
-            <i class="material-icons notranslate">build</i>
-            <span>
-              the development of this site and an API to test multiple accounts at the same time
-              or all of your followers.
-            </span>
-          </li>
-        </ul>
+      <div
+        class="modal-content"
+        data-i18n="common:supportModal.content"
+      >
+        {{common:supportModal.content}}
       </div>
       <div class="modal-footer">
-        <a href="https://www.paypal.me/shadowban" class="waves-effect waves white btn">Donate via PayPal</a>
+        <a
+          href="https://www.paypal.me/shadowban"
+          class="waves-effect waves white btn"
+          data-i18n="common:supportModal.button"
+        >
+          {{common:supportModal.button}}
+        </a>
       </div>
     </div>
     <%= htmlWebpackPlugin.options.devTag %>
