Chore: rel="noopener noreferrer" on all <a>

--- a/src/index.html
+++ b/src/index.html
@@ -169,11 +169,8 @@
     <footer class="section">
       <div class="row">
         <div class="col offset-s2 s8 center-align">
-          Source code is <a href="https://github.com/shadowban-eu/TwitterShadowBanV2" target="_blank">public on Github</a>
           <br />
-          No cookies, no tracking, screw NetzDG and GDPR!
-          <br />
-          Made in Germany by <a href="https://twitter.com/Netzdenunziant" target="_blank">@Netzdenunziant</a> and <a href="https://twitter.com/raphaelbeerlin" target="_blank">@raphaelbeerlin</a>
+          Made in Germany by <a href="https://twitter.com/shadowban_eu" target="_blank" rel="noopener noreferrer">@shadowban_eu</a>
         </div>
       </div>
     </footer>
@@ -248,8 +245,7 @@
     </div>
     <div class="ph-item">
       <div class="ph-col-12">
-          <div class="ph-picture"></div>
-
+        <div class="ph-picture"></div>
       </div>
     </div>
   </body>
