EMERG: broken deboost test notice

--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,12 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col s12" style="color: red; font-size: 20px; font-family: Roboto">
+          We are currently experiencing a major issue with our user accounts, preventing us from testing for reply deboosting!<br />
+          I am looking into the problem -- @fossybeer
+        </div>
+      </div>
     </section>
 
     <section id="controls" class="row">
