EMERG: add fixed notice

--- a/src/index.html
+++ b/src/index.html
@@ -73,8 +73,10 @@
       </div>
       <div class="row">
         <div class="col s12" style="color: red; font-size: 20px; font-family: Roboto">
-          We are currently experiencing a major issue with our user accounts, preventing us from testing for reply deboosting!<br />
-          I am looking into the problem -- @fossybeer
+          <ul>
+            <li>[17:54] We are currently experiencing a major issue with our user accounts, preventing us from testing for reply deboosting!<br />
+                I am looking into the problem -- @fossybeer</li>
+            <li>[18:09] Problem should be fixed. Sorry about the inconvenience! -- @fossybeer
         </div>
       </div>
     </section>
