Add: manifest, service-worker, demanded favicon sizes

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <meta name="twitter:image:alt" content="shadwoban.eu">
     <base target="_blank" href="<%= baseHref %>">
 
+    <link rel="manifest" href="/manifest.json" />
     <link rel="prefetch" href="./img/gears.svg" />
 
     <!--Import Google Icon Font-->
