Add: install button

--- a/src/index.html
+++ b/src/index.html
@@ -56,8 +56,8 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col s12">
+      <div class="row header-buttons">
+        <div class="col 6">
           <div class="loadable-container">
             <button
               class="btn modal-trigger waves-effect waves white loadable loading"
@@ -69,6 +69,16 @@
             <div id="donate-thanks" class="hide">
               Thank you for your donation!
             </div>
+          </div>
+        </div>
+        <div class="col 6 hiddendiv">
+          <div class="loadable-container">
+            <button
+              class="btn install-trigger waves-effect waves white loadable loading"
+              data-i18n="common:buttons.install"
+            >
+              {{common:buttons.install}}
+            </button>
           </div>
         </div>
       </div>
