Fix: iOS expecting password when autocomplete=username; use =nickname

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
               <input
                 id="screenName"
                 type="text"
-                autocomplete="username"
+                autocomplete="nickname"
                 required
                 pattern="^[A-Za-z0-9_]{1,15}$"
                 data-position="bottom"
